Adjust icon alignment corrections in other components

--- a/src/components/menu/theme.css
+++ b/src/components/menu/theme.css
@@ -163,7 +163,7 @@
   }
 
   svg {
-    -ms-transform: translateY(-1px);
+    transform: translateY(-1px);
   }
 }
 
